# yt-stem-splitter

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_integration_tests.sh  run_tests.sh  setup.py  setup_github.sh  split_stems.py  yt
src/: __init__.py
src/audio/: __init__.py  analysis.py  stem_splitter.py
src/cli/: __init__.py  split_stems_cli.py  yt_cli.py
src/downloader/: __init__.py  youtube.py
src/scrapers/: __init__.py  tunebat.py
src/utils/: __init__.py  file_utils.py  sanitization.py  subprocess_utils.py
tests/: __init__.py  test_audio_analysis.py  test_file_utils.py  test_integration.py  test_sanitization.py  test_stem_splitter.py  test_subprocess_utils.py  test_tunebat.py  test_youtube_downloader.py
